--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -70,7 +70,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 .hero .headline h1 {
   font-size: 6rem;
